Fix header bug on mobile. remove shadow for now

--- a/internal/ui/static/style.css
+++ b/internal/ui/static/style.css
@@ -35,12 +35,12 @@ body, html {
     position: absolute;
     top: 20px;
     left: 40px;
-    z-index: 10;
+    z-index: 175;
     background: var(--glass-bg);
     backdrop-filter: blur(8px);
     border-radius: 12px;
     border: 1px solid var(--glass-border);
-    box-shadow: var(--shadow);
+    /* box-shadow: var(--shadow); */
     width: 280px;
     overflow: hidden;
     transition: all 0.3s ease;
